<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbarSize="12dip">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginTop="5dip"
			android:text="@string/AlgoList" />
		<Spinner android:id="@+id/spinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:prompt="@string/AlgoList" />
		<Button android:id="@+id/SelectFileButton"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/but_title_select_file" />
		<CheckBox android:id="@+id/UpperCaseCB"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/cb_upper_case" />
		<Button android:id="@+id/GenerateButton" android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/calculate_but" 
				android:layout_gravity="right"/>
		<RelativeLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">	
		<TextView android:id="@+id/label_result" android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button android:id="@+id/CopyButton" android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_below="@+id/label_result"
				android:text="@string/copy_but" android:visibility="invisible"/>
	</RelativeLayout>
</LinearLayout>
</ScrollView>