<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbarSize="12dip">

    <LinearLayout
        android:id="@+id/about_layout_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="8dip">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:src="@mipmap/icon" />

        <TextView
            android:id="@+id/about_appname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dip"
            android:gravity="center"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:gravity="center"
            android:text="@string/copyright"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/contact"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_license_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:gravity="center"
            android:text="@string/LicenseTitle"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" /><!--android:textColor="#ffffff"-->
        <TextView
            android:id="@+id/about_license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="8dip"
            android:autoLink="web"
            android:gravity="left"
            android:text="@string/License"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="#7d95c6" />
        <!--android:textColor="#ffffff" -->
    </LinearLayout>
</ScrollView>